{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "f93f870c-b012-42a2-bb80-bc55a193a5ed",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "4c74b320-f956-4552-add7-dee4de5465ea",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": "Hold(duration=0.01,pressPoint=0.1)",
                    "initialStateCheck": true
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "7c6a1cbb-1aee-4825-a892-8ea449f12faf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "d2fbf9ea-5fc3-4ff6-b32b-5b1c44a2f862",
                    "path": "2DVector",
                    "interactions": "Hold(duration=0.2),Press",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "01a5c9db-92af-4d88-b6a5-6a344d6ebb48",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerControls",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c742e90f-b53d-4be0-bfee-20af70afaeba",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerControls",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a990493f-6228-437e-bacd-1dcdcdb8524b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerControls",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ccec2b88-da3e-4bdc-8529-0412389ad304",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerControls",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "277b000e-d333-484e-9fa7-627bdeaf4e3c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerControls",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdb37045-86c5-4475-9400-1329f8d9d768",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerControls",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "dcbc5cdd-a185-42f5-b819-26ba17f3e947",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "6cf756b3-939c-4d90-8200-bce4eeec941a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a85abd91-5b93-4f3f-8ea7-d64ab19615a7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerControls",
            "bindingGroup": "PlayerControls",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}